@@ -135,6 +135,44 @@ For more information about Kharkiv Map, click L<here|https://en.wikipedia.org/wi
  # Output like:
  # XML file: .*/kharkiv-map.xml
 
+=head1 EXAMPLE3
+
+ # Pragmas.
+ use strict;
+ use warnings;
+
+ # Modules.
+ use Map::Tube::GraphViz;
+ use Map::Tube::GraphViz::Utils qw(node_color_without_label);
+ use Map::Tube::Kharkiv;
+
+ # Object.
+ my $obj = Map::Tube::Kharkiv->new;
+
+ # GraphViz object.
+ my $g = Map::Tube::GraphViz->new(
+         'callback_node' => \&node_color_without_label,
+         'driver' => 'neato',
+         'tube' => $obj,
+ ); 
+
+ # Get graph to file.
+ $g->graph('Kharkiv.png');
+
+ # Print file.
+ system "ls -l Kharkiv.png";
+
+ # Output like:
+ # -rw-r--r-- 1 skim skim 94579 Dec 23 14:15 Kharkiv.png
+
+=begin html
+
+<a href="https://raw.githubusercontent.com/tupinek/Map-Tube-Kharkiv/master/images/Kharkiv.png">
+  <img src="https://raw.githubusercontent.com/tupinek/Map-Tube-Kharkiv/master/images/Kharkiv.png" alt="Харківський метрополітен" width="300px" height="300px" />
+</a>
+
+=end html
+
 =head1 DEPENDENCIES
 
 L<File::Share>,
